[package]
name = "transport-io"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0.1"
macroquad = "0.4.13"
macroquad-profiler = "0.2.0"
pathfinding = "4.11.0"
quad-storage = "0.1.3"
ron = "0.8.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"

[[bin]]
name = "transport-io"
path = "src/main.rs"

